size fixing on mobile, adding redirect in 404

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,6 +1,5 @@
 .projects-container
 {
-    aspect-ratio: 6000 / 3376;
     width: 100vw;
     background-image: url("../assets/backgrounds/Beesting_Web_Projects.jpg");
     background-size: cover;
