--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -15,7 +15,6 @@
 
 .services-container-mobile
 {
-    aspect-ratio: 6000 / 3376;
     background-image: url("../assets/backgrounds/Beesting_Web_Projects.jpg");
     background-size: cover;
     background-repeat: no-repeat;
